--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -44,5 +45,6 @@ bin/
 /TEMP/
 /OUTPUT/
 /INPUT/
+/.idea/
 /.idea/
 /.idea/
